--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ios": "expo start --ios",
     "android": "expo start --android",
     "test:e2e": "./bin/downloadExpoApp.sh && detox test --configuration ios.sim.expo",
+    "build": "expo build:web",
     "build:e2e": "detox build -c ios.sim.expo",
     "ci:test:e2e": "detox test -c ios.sim.release -l verbose --cleanup",
     "ci:build:e2e": "detox build -c ios.sim.release",
@@ -15,7 +16,7 @@
     "format:md": "prettier --write \"**/*.md\"",
     "format:ts": "prettier --write \"app/**/*.ts{,x}\"",
     "lint": "eslint App.js app storybook test --fix --ext .js,.ts,.tsx && yarn format",
-    "patch": "patch-package",
+    "patch": "patch-package --use-yarn",
     "storybook": "start-storybook -p 9001 -c ./storybook",
     "test": "jest",
     "adb": "adb reverse tcp:9090 tcp:9090 && adb reverse tcp:3000 tcp:3000 && adb reverse tcp:9001 tcp:9001 && adb reverse tcp:8081 tcp:8081",
@@ -100,6 +101,7 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-native": "3.10.0",
+    "expo-cli": "^5.4.11",
     "expo-detox-hook": "1.0.10",
     "fbjs-scripts": "3.0.0",
     "jest": "^25.5.4",
