--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "start": "yarn run compile && bin/setup && expo start --web",
+    "start": "expo web",
     "ios": "expo start --ios",
     "android": "expo start --android",
     "test:e2e": "./bin/downloadExpoApp.sh && detox test --configuration ios.sim.expo",
@@ -59,7 +59,7 @@
     "react-native-keychain": "6.2.0",
     "react-native-modal-datetime-picker": "^12.0.0",
     "react-native-pager-view": "5.4.6",
-    "react-native-reanimated": "~2.2.0",
+    "react-native-reanimated": "2.8.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-tab-view": "^3.1.1",
