--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "ios": "expo start --ios",
     "android": "expo start --android",
     "test:e2e": "./bin/downloadExpoApp.sh && detox test --configuration ios.sim.expo",
-    "build": "expo build:web",
     "build:e2e": "detox build -c ios.sim.expo",
     "ci:test:e2e": "detox test -c ios.sim.release -l verbose --cleanup",
     "ci:build:e2e": "detox build -c ios.sim.release",
@@ -59,7 +58,7 @@
     "react-native-keychain": "6.2.0",
     "react-native-modal-datetime-picker": "^12.0.0",
     "react-native-pager-view": "5.4.6",
-    "react-native-reanimated": "2.8.0",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-tab-view": "^3.1.1",
@@ -99,7 +98,6 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-native": "3.10.0",
-    "expo-cli": "^5.4.11",
     "expo-detox-hook": "1.0.10",
     "fbjs-scripts": "3.0.0",
     "jest": "^25.5.4",
