--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo web",
+    "build": "expo build:web",
     "ios": "expo start --ios",
     "android": "expo start --android",
     "test:e2e": "./bin/downloadExpoApp.sh && detox test --configuration ios.sim.expo",
