--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
       "/e2e"
     ],
     "transformIgnorePatterns": [
-      "node_modules/(?!(jest-)?react-native|@react-native-async-storage|expo-linear-gradient|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|native-base|@storybook)"
+      "node_modules/(?!(jest-)|expo-linear-gradient|react-clone-referenced-element||expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|native-base|@storybook)"
     ]
   },
   "prettier": {
